--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,55 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" color="#cd1f32">
   <ion-toolbar>
     <ion-title>
-      Blank
+      <div style="display: flex; align-items: center;">
+        <div>
+          <ion-img 
+            src="assets/Univalle.svg"
+            alt="The Wisconsin State Capitol building in Madison, WI at night">
+          </ion-img>
+        </div>
+        <div>Univalle Maps</div>
+      </div>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div id="controls">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="10">
+          <ion-list>
+            <ion-item>
+              <ion-select [(ngModel)]="origin" label="Desde:" aria-label="from" interface="action-sheet" placeholder="Lugar A" fill="solid">
+                <ion-select-option *ngFor="let item of data?.locations" [value]="item">{{item.name}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+        <ion-col size="2">
+          <ion-button>
+            <ion-icon slot="icon-only" name="location-sharp"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="10">
+          <ion-list>
+            <ion-item>
+              <ion-select [(ngModel)]="destination" label="Hasta:" aria-label="end" interface="action-sheet" placeholder="Lugar B" fill="solid">
+                <ion-select-option *ngFor="let item of data?.locations" [value]="item">{{item.name}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+        <ion-col size="2">
+          <ion-button (touchstart)="calculateRoute($event)">
+            <ion-icon slot="icon-only" name="search-sharp"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+  <div id="map"></div>
 </ion-content>
