--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,46 @@
-#container {
-  text-align: center;
+ion-content {
+  #map {
+    margin: 0 5vw 5vh  5vw;
+    width: 90vw;
+    height: 60vh;
+    opacity: 0;
+    transition: opacity 150ms ease-in;
+    display: block;
+    &.show-map{
+      opacity: 1;
+    }
+  }
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  #controls{
+    display: block;
+    margin: 0 2vw 2vh 2vw;
+    width: 90vw;
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-select {
+  --padding-start: 0px;
+  --padding-end: 0px;
+  --padding-inline-end:0px,
+  --padding-top : 0px;
+  --padding-bottom : 0px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-list.list-md {
+  padding-top: 0px;
 }
 
-#container a {
-  text-decoration: none;
+ion-button{
+  margin-top: 25px;
+  --ion-color-primary: #cd1f32
+}
+
+ion-toolbar{
+  --ion-toolbar-background: #cd1f32;
+}
+
+ion-img{
+  width: 50px;
+  height: 50px;
+  margin: 3px;
 }
